--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   text-align: center;
   background: black;
+  min-width: 500px;
 }
 
 .main {
@@ -9,15 +10,16 @@ body {
   background: #f4f4f4;
   border: 3px solid white;
   border-radius: 20px;
-  width: 600px;
-  height: 780px;
+  max-width: 600px;
+  min-width: 400px;
+  height: auto;
   margin: 40px auto;
   justify-content: center;
 }
 
 .inner-div {
   background: #6944ff;
-  height: 300px;
+  height: auto;
   width: 100%;
   padding-top: 30px;
 }
@@ -37,7 +39,7 @@ input {
   border-radius: 5px;
   margin: 10px;
 }
-
+/* used to remove the scroll arrows on the input field */
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -45,6 +47,10 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+::-webkit-input-placeholder {
+  color: white;
 }
 
 button {
@@ -60,8 +66,8 @@ button {
   margin: 30px;
   height: 120px;
   background: white;
-  width: 560px;
-  margin: auto;
+  max-width: 560px;
+  /* margin: auto; */
 }
 
 h2 {
@@ -69,5 +75,5 @@ h2 {
   color: #3d3d3d;
 }
 p {
-  #color: #3d3d3d;
+  color: #3d3d3d;
 }
