--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   text-align: center;
   background: black;
-  min-width: 300px;
+  min-width: 350px;
 }
 
 .main {
@@ -11,7 +11,7 @@ body {
   border: 3px solid white;
   border-radius: 20px;
   max-width: 600px;
-  min-width: 150px;
+  min-width: 300px;
   height: auto;
   margin: 40px auto;
   justify-content: center;
@@ -64,9 +64,11 @@ button {
 
 .info {
   margin: 30px;
-  height: 120px;
+  height: auto;
   background: white;
   max-width: 560px;
+  min-width: 250px;
+  padding: 0 10px 10px 10px;
   /* margin: auto; */
 }
 
