--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
   max-width: 600px;
   min-width: 300px;
   height: auto;
-  margin: 40px auto;
+  margin: 40px;
   justify-content: center;
 }
 
