--- a/index.css
+++ b/index.css
@@ -13,7 +13,8 @@ body {
   max-width: 600px;
   min-width: 300px;
   height: auto;
-  margin: 40px;
+  margin-left: auto;
+  margin-right: auto;
   justify-content: center;
 }
 
