--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .inner-div {
