--- a/index.css
+++ b/index.css
@@ -13,8 +13,7 @@ body {
   max-width: 600px;
   min-width: 300px;
   height: auto;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 40px auto;
   /* justify-content: center; */
 }
 
