--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
   margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
-  /* justify-content: center; */
+  justify-content: center;
 }
 
 .inner-div {
