--- a/index.css
+++ b/index.css
@@ -73,6 +73,7 @@ button {
   max-width: 560px;
   min-width: 250px;
   padding: 0 10px 10px 10px;
+  border-radius: 10px;
   /* margin: auto; */
 }
 
