--- a/index.css
+++ b/index.css
@@ -40,8 +40,8 @@ input {
   color: white;
   font-size: 5rem;
   text-align: center;
-  max-width: 8rem;
-  height: 6rem;
+  max-width: 5%;
+  height: auto;
   border: 2px solid #b295ff;
   background: inherit;
   border-radius: 5px;
