--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ input {
   color: white;
   font-size: 5rem;
   text-align: center;
+  max-width: 30%;
   min-width: 20%;
   height: auto;
   border: 2px solid #b295ff;
