--- a/index.css
+++ b/index.css
@@ -79,7 +79,7 @@ button {
   height: auto;
   background: white;
   width: auto;
-  padding: 0 10px 10px 10px;
+  padding: 0 10px;
   border: 1px solid #6944ff;
   border-radius: 10px;
 }
