--- a/index.css
+++ b/index.css
@@ -24,10 +24,11 @@ body {
   background: #6944ff;
   height: auto;
   width: 100%;
-  padding-top: 30px;
 }
 
 h1 {
+  margin-top: 0;
+  padding-top: 25px;
   font-size: 2.5rem;
   color: white;
 }
