--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Golos Text", sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   background: black;
 }
@@ -10,7 +10,7 @@ body {
   background: #f4f4f4;
   border: 3px solid white;
   border-radius: 20px;
-  max-width: 800px;
+  max-width: 700px;
   min-width: 390px;
   height: auto;
   margin-top: 40px;
@@ -21,33 +21,33 @@ body {
 
 .inner-div {
   width: 100%;
-  background: #6944ff;
+  background: #000280;
   height: auto;
   width: 100%;
 }
 
 h1 {
   margin-top: 0;
-  padding-top: 25px;
+  padding-top: 35px;
   font-size: 2.5rem;
   color: white;
 }
 
 .main-h2 {
-  font-size: 2rem;
+    font-size: 2rem;
   color: #fff;
 }
 
 input {
-  color: white;
+  color: #fff;
   font-size: 5rem;
   text-align: center;
-  max-width: 30%;
-  min-width: 20%;
+  max-width: 35%;
+  min-width: 25%;
   height: auto;
-  border: 2px solid #b295ff;
-  background: inherit;
-  border-radius: 5px;
+  border: 2px solid white;
+  background: #000280;
+  border-radius: 10px;
   margin: 10px;
 }
 
@@ -67,13 +67,14 @@ input[type="number"] {
 }
 
 button {
-  color: #3d3d3d;
+  color: #000280;
   margin: 25px;
   padding: 12px 35px;
   font-family: inherit;
   font-weight: bold;
   border-radius: 5px;
   border: none;
+
 }
 
 .info {
@@ -82,20 +83,20 @@ button {
   background: white;
   width: auto;
   padding: 0 10px;
-  border: 1px solid #6944ff;
+  border: 1px solid #000280;
   border-radius: 10px;
 }
 
 h2 {
   line-height: 0.5;
-  color: #6944ff;
-  font-size: 1.25rem;
+  color: #000280;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
 p {
   line-height: 2rem;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   font-weight: bold;
-  color: #3d3d3d;
+  color: #000;
 }
