--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 
 .main {
   overflow: hidden;
-  background: #f4f4f4;
+  background: radial-gradient(#f4f4f4 #fff);
   border: 3px solid white;
   border-radius: 20px;
   max-width: 700px;
