--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   text-align: center;
-  background-image: radial-gradient(white, black) black;
+  background-image: radial-gradient(white, black);
+  b
 }
 
 .main {
