--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Roboto', sans-serif;
   text-align: center;
   background-image: radial-gradient(white, black);
-  b
+  background-attachment: fixed;
 }
 
 .main {
