--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
 .main {
   overflow: hidden;
   background: #f4f4f4;
-  border: 3px solid white;
+  border: 3px solid #000280;
   border-radius: 20px;
   max-width: 700px;
   min-width: 390px;
