--- a/index.css
+++ b/index.css
@@ -2,14 +2,13 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   text-align: center;
-  background-image: radial-gradient(white, black);
-  background-attachment: fixed;
+  background: #4a5667;
 }
 
 .main {
   overflow: hidden;
   background: #f4f4f4;
-  border: 3px solid #000280;
+  border: 3px solid #fff;
   border-radius: 20px;
   max-width: 700px;
   min-width: 390px;
